[package]
name = "conductor"
version = "0.1.0"
authors = ["Nikita Pekin <nikita@nikitapekin.com>"]
edition = "2018"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs"
]
description = "Netflix Conductor client for Rust."
homepage = "https://github.com/indiv0/conductor-rs"
repository = "https://github.com/indiv0/conductor-rs"
documentation = "https://docs.rs/conductor"
readme = "README.md"
keywords = [
    "conductor",
    "netflix",
    "netflix-conductor"
]
categories = [
    "api-bindings",
    "asynchronous"
]
license = "Apache-2.0"

[badges]
codecov = { repository = "indiv0/conductor-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
version-sync = "0.8.1"
