[package]
name = "conductor"
version = "0.1.0"
authors = ["Nikita Pekin <nikita@nikitapekin.com>"]
edition = "2018"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs"
]
description = "Netflix Conductor client for Rust."
homepage = "https://github.com/indiv0/conductor-rs"
repository = "https://github.com/indiv0/conductor-rs"
documentation = "https://docs.rs/conductor"
readme = "README.md"
keywords = [
    "conductor",
    "netflix",
    "netflix-conductor"
]
categories = [
    "api-bindings",
    "asynchronous"
]
license = "Apache-2.0"

[badges]
codecov = { repository = "indiv0/conductor-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
criterion = "0.3.0"
matches = "0.1.8"
version-sync = "0.8.1"

[[example]]
name = "task_def"
path = "examples/task_def.rs"

[[bench]]
name = "task"
harness = false
