[package]
name = "conductor"
version = "0.1.0"
authors = ["Nikita Pekin <nikita@nikitapekin.com>"]
edition = "2018"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs"
]
description = "Netflix Conductor client for Rust."
homepage = "https://github.com/indiv0/conductor-rs"
repository = "https://github.com/indiv0/conductor-rs"
documentation = "https://docs.rs/conductor"
readme = "README.md"
keywords = [
    "conductor",
    "netflix",
    "netflix-conductor"
]
categories = [
    "api-bindings",
    "asynchronous"
]
license = "Apache-2.0"

[badges]
codecov = { repository = "indiv0/conductor-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = []
integration_tests = []

[dependencies]
#futures01 = { package = "futures", version = "0.1.28" }
futures-util-preview = { version = "0.3.0-alpha.19" }
http = "0.1.18"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
log = "0.4.8"
#reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
#url = "1.7.2"

[dev-dependencies]
criterion = "0.3.0"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
#futures-core-preview = { version = "0.3.0-alpha.18" }
lazy_static = "1.3.0"
matches = "0.1.8"
mockito = "0.20.0"
pretty_env_logger = "0.3.1"
tokio = { version = "0.2.0-alpha.4" }
version-sync = "0.8.1"

[[example]]
name = "task_def"
path = "examples/task_def.rs"

[[bench]]
name = "http"
harness = false

[[bench]]
name = "task"
harness = false
